# izthere

./: .gitignore  README.md  config.template.yaml  pyproject.toml
src/izthere/: logger.py  main.py  web_utils.py
src/izthere/monitors/: __init__.py  ashby_board_monitor.py  base.py  html_word_monitor.py  json_parser_monitor.py  web_utils.py  xpath_word_monitor.py
src/izthere/notifiers/: __init__.py  base.py  telegram_notifier.py
